Enhance vulnerability details and remediation UI
Refactors and extends SapoToolWindow to provide improved vulnerability details, including remediation guidance for direct and transitive dependencies, and attempts to scrape fixed versions from OSV.dev when not available in the API. Updates the OsvVulnerability model to include package and versions fields, and adjusts related test and factory code to match the new SapoToolWindow constructor signature.